--- a/application.css
+++ b/application.css
@@ -3,6 +3,9 @@
 }
 
 .d3-tip {
+  position: fixed;
+  top: 10px;
+  left: 500px;
   line-height: 1;
   font-weight: bold;
   padding: 12px;
@@ -55,17 +58,23 @@
  }
 
  #cover-img{
-   max-width: 150px;
-   max-height: 150px;
+   min-width: 350px;
+   min-height: 254px;
+   max-width: 350px;
+   max-height: 254px;
    margin: 0 auto;
  }
 
  #profile{
+   min-width: 200px;
+   min-height: 400px;
    display: flex; 
    flex-direction: column;
  }
 
  #stats{
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-size: 25px;
    display: flex;
    flex-direction: row; 
    min-height: 100px;
@@ -89,6 +98,8 @@
  }
 
  center h2{
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-size: 35px;
    color: gold;
  }
 
@@ -137,7 +148,7 @@ svg:not(:root){
 html, body {  
   margin: 0;
   padding: 0;
-  background-color: rgb(88, 60, 60);
+  background-color: rgb(212, 192, 192);
 }
 .node {
   cursor: pointer;
