--- a/application.css
+++ b/application.css
@@ -5,11 +5,12 @@
 
 /*look here*/
 .d3-tip {
+  border-radius: 40px;
   position: relative;
   line-height: 1;
   font-weight: bold;
-  padding: 12px;
-  background: rgba(163, 28, 28, 0.356);
+  padding: 15px 10px;
+  background: rgba(167, 167, 167, 0.294);
   color: #fff;
   border-radius: 2px;
 }
@@ -22,7 +23,7 @@
   font-size: 10px;
   width: 100%;
   line-height: 1;
-  color: rgba(0, 0, 0, 0.8);
+  color: rgba(167, 167, 167, 0.294);
   content: "\25BC";
   position: absolute;
   text-align: center;
@@ -38,7 +39,7 @@
 
   /* background-image: url('https://a.espncdn.com/combiner/i?img=/i/teamlogos/nba/500/wsh.png&h=80&w=80&scale=crop'); */
   fill: #fff;
-  stroke: rgb(207, 161, 74);
+  /* stroke: rgb(207, 161, 74); */
   stroke-width: 2.5px;
 }
 
@@ -50,7 +51,7 @@
  }
 
 .node text {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Maven Pro', sans-serif;
   font: 12px sans-serif;
 }
 
@@ -76,7 +77,7 @@
  }
 
  #stats{
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-family: 'Maven Pro', sans-serif;
    font-size: 25px;
    display: flex;
    flex-direction: row; 
@@ -102,9 +103,9 @@
 
  /*look here*/
  center h2{
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   font-size: 35px;
-   color: gold;
+   font-family: 'Maven Pro', sans-serif;
+   font-size: 40px;
+   color: rgb(255, 217, 0);
  }
 
 
@@ -154,7 +155,7 @@ svg:not(:root){
 html, body {  
   margin: 0;
   padding: 0;
-  background-color: rgb(255, 208, 0);
+  background-image: url('../teams/nab9.jpg');
 }
 .node {
   cursor: pointer;
@@ -164,13 +165,17 @@ html, body {
 }
 
 .node text {
-  font: 10px sans-serif;
+  fill: rgba(246, 238, 238, 0.842);
+  font-family: 'Maven Pro', sans-serif;
+  font-size: 50px;
 }
 
 .link {
   fill: none;
-  stroke: rgb(146, 146, 146);
-  stroke-width: 1px;
+  stroke: rgba(114, 114, 114, 0.835);
+  stroke-width: 4px;
 }
+
+
 
 
