--- a/application.css
+++ b/application.css
@@ -5,14 +5,17 @@
 
 /*look here*/
 .d3-tip {
-  border-radius: 40px;
   position: relative;
   line-height: 1;
   font-weight: bold;
   padding: 15px 10px;
-  background: rgba(167, 167, 167, 0.294);
+  background: linear-gradient(-225deg, #43234d 0%,
+   #130f1a 29%, #8a3e3e 67%,
+    #622569 100%),
+     repeating-linear-gradient(-115deg, transparent, transparent 20px, rgba(255,255,255,0.1) 20px, rgba(255,255,255,0.1) 40px),
+      repeating-linear-gradient(115deg, transparent, transparent 20px, rgba(255,255,255,0.1) 20px, rgba(255,255,255,0.1) 40px);
   color: #fff;
-  border-radius: 2px;
+  border-radius: 15px;
 }
 
 /* Creates a small triangle extender for the tooltip */
@@ -155,7 +158,7 @@ svg:not(:root){
 html, body {  
   margin: 0;
   padding: 0;
-  background-image: url('../teams/nab9.jpg');
+  background-image: url('../teams/nba8.jpg');
 }
 .node {
   cursor: pointer;
@@ -167,7 +170,7 @@ html, body {
 .node text {
   fill: rgba(246, 238, 238, 0.842);
   font-family: 'Maven Pro', sans-serif;
-  font-size: 50px;
+  font-size: 30px;
 }
 
 .link {
