--- a/application.css
+++ b/application.css
@@ -2,11 +2,26 @@
   cursor: pointer;
 }
 
+#positioner{
+  position: fixed;
+  top: 3vh;
+  right: 1vw;
+  line-height: 1;
+  font-weight: bold;
+  padding: 15px 20px;
+  background: linear-gradient(-225deg, #43234d 0%,
+   #130f1a 29%, #8a3e3e 67%,
+    #622569 100%),
+     repeating-linear-gradient(-115deg, transparent, transparent 20px, rgba(255,255,255,0.1) 20px, rgba(255,255,255,0.1) 40px),
+      repeating-linear-gradient(115deg, transparent, transparent 20px, rgba(255,255,255,0.1) 20px, rgba(255,255,255,0.1) 40px);
+  color: #fff;
+  border-radius: 5%;
+}
+
 
 /*look here*/
 .d3-tip {
-  position: relative;
-  line-height: 1;
+  /* line-height: 1;
   font-weight: bold;
   padding: 15px 10px;
   background: linear-gradient(-225deg, #43234d 0%,
@@ -15,27 +30,34 @@
      repeating-linear-gradient(-115deg, transparent, transparent 20px, rgba(255,255,255,0.1) 20px, rgba(255,255,255,0.1) 40px),
       repeating-linear-gradient(115deg, transparent, transparent 20px, rgba(255,255,255,0.1) 20px, rgba(255,255,255,0.1) 40px);
   color: #fff;
-  border-radius: 15px;
+  border-radius: 5%; */
 }
 
 /* Creates a small triangle extender for the tooltip */
 /*look here*/
 .d3-tip:after {
-  box-sizing: border-box;
+
+  /* box-sizing: border-box;
   display: inline;
   font-size: 10px;
   width: 100%;
   line-height: 1;
-  color: rgba(167, 167, 167, 0.294);
+  color: linear-gradient(-225deg, #43234d 0%,
+   #130f1a 29%, #8a3e3e 67%,
+    #622569 100%),
+     repeating-linear-gradient(-115deg, transparent, transparent 20px, rgba(255,255,255,0.1) 20px, rgba(255,255,255,0.1) 40px),
+      repeating-linear-gradient(115deg, transparent, transparent 20px, rgba(255,255,255,0.1) 20px, rgba(255,255,255,0.1) 40px);
+  
   content: "\25BC";
-  position: absolute;
-  text-align: center;
+  position: fixed;
+  text-align: center; */
 }
 
 .d3-tip.n:after {
-  margin: -1px 0 0 0;
+
+  /* margin: -1px 0 0 0;
   top: 100%;
-  left: 0;
+  left: 0; */
 }
 
 .node circle {
@@ -65,23 +87,29 @@
  }
 
  #cover-img{
-   min-width: 350px;
-   min-height: 254px;
-   max-width: 350px;
-   max-height: 254px;
+   padding-bottom: 20px;
+   min-width: 175px;
+   min-height: 127px;
+   max-width: 175px;
+   max-height: 127px;
    margin: 0 auto;
  }
 
  #profile{
-   min-width: 200px;
+   max-width: 300px;
+   max-height: 400px;
+   min-width: 300px;
    min-height: 400px;
    display: flex; 
    flex-direction: column;
+     white-space: nowrap; 
+  overflow: hidden;
+  text-overflow: ellipsis;
  }
 
  #stats{
    font-family: 'Maven Pro', sans-serif;
-   font-size: 25px;
+   font-size: 20px;
    display: flex;
    flex-direction: row; 
    min-height: 100px;
@@ -109,6 +137,11 @@
    font-family: 'Maven Pro', sans-serif;
    font-size: 40px;
    color: rgb(255, 217, 0);
+ }
+ center h4{
+   font-family: 'Maven Pro', sans-serif;
+   font-size: 20px;
+   color: whitesmoke;
  }
 
 
