--- a/src/application.scss
+++ b/src/application.scss
@@ -7,9 +7,10 @@
 // }
 
 
+
 .rainbow-text {
   font-family: 'Orbitron', sans-serif;
-  position: absolute;
+  position: fixed;
   top: 6%;
   display: block;
   left: 5%;
@@ -23,14 +24,14 @@
 }
 
 .title-text span.letters {
-  font-size: 3rem;
+  font-size: 7.5vh;
 }
 
 #icon-size{
   // padding: 40px 0px;
 }
 #last-letter{
-  margin-bottom: 20px;
+  margin-bottom: 3vh;
 }
 
 
