--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,18 @@
+svg {
+  display: block;
+  margin: auto;
+  border: 5px solid gray; }
+
 .node {
   cursor: pointer; }
 
-#wholePage {
+.radial-tree {
   display: flex;
-  flex-direction: row; }
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh; }
 
 .rainbow-text {
   font-family: "Orbitron", sans-serif;
@@ -18,10 +27,10 @@
   text-align: start; }
 
 #icon-size {
-  padding: 10px 0px; }
+  padding: 2px 0px; }
 
 .letters {
-  font-size: 5.5vh;
+  font-size: 2.5vw;
   color: #2bff00;
   text-shadow: 2px 2px 6px #333;
   animation: color-changer 10s infinite;
