--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,75 @@
+@-webkit-keyframes textColor {
+  0% {
+    color: #7e0fff; }
+  50% {
+    color: #0fffc1; }
+  100% {
+    color: #7e0fff; } }
+
+@-webkit-keyframes fill {
+  0% {
+    fill: rgba(246, 238, 238, 0.842); }
+  50% {
+    fill: #ff6f61;
+    font-size: 17px; }
+  100% {
+    font-size: 16px;
+    fill: rgba(246, 238, 238, 0.842); } }
+
+@-webkit-keyframes fill-all-star {
+  0% {
+    fill: rgba(246, 238, 238, 0.842); }
+  50% {
+    font-size: 17px;
+    fill: #fbff00; }
+  100% {
+    font-size: 16px;
+    fill: rgba(246, 238, 238, 0.842); } }
+
+@-webkit-keyframes animStar {
+  from {
+    transform: translateY(0px); }
+  to {
+    transform: translateY(-2000px); } }
+
+@keyframes grz {
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 50%; }
+  100% {
+    background-position: 0% 50%; } }
+
+@-webkit-keyframes grz {
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 50%; }
+  100% {
+    background-position: 0% 50%; } }
+
+@keyframes color-changer {
+  33% {
+    color: #ee0bf5; }
+  /* #EE0BF5 cctv*/
+  66% {
+    color: #00ccff; }
+  /* #00CCFF marine */
+  100% {
+    color: #2bff00; }
+  /* #66F50B radio */ }
+
+@-webkit-keyframes color-changer {
+  33% {
+    color: #ee0bf5; }
+  /* #EE0BF5 cctv*/
+  66% {
+    color: #00ccff; }
+  /* #00CCFF marine */
+  100% {
+    color: #2bff00; }
+  /* #66F50B radio */ }
+
 svg {
   display: block;
   margin: auto; }
@@ -49,28 +121,6 @@ svg {
   .letters:nth-of-type(7) {
     animation-delay: 700ms; }
 
-@keyframes color-changer {
-  33% {
-    color: #ee0bf5; }
-  /* #EE0BF5 cctv*/
-  66% {
-    color: #00ccff; }
-  /* #00CCFF marine */
-  100% {
-    color: #2bff00; }
-  /* #66F50B radio */ }
-
-@-webkit-keyframes color-changer {
-  33% {
-    color: #ee0bf5; }
-  /* #EE0BF5 cctv*/
-  66% {
-    color: #00ccff; }
-  /* #00CCFF marine */
-  100% {
-    color: #2bff00; }
-  /* #66F50B radio */ }
-
 #positioner {
   transform: scale(0.85);
   position: fixed;
@@ -81,7 +131,8 @@ svg {
   padding: 15px 20px;
   background: linear-gradient(-225deg, #26daad2d 0%, #001510 25%, #360033 60%, #0b8893b9 100%), repeating-linear-gradient(-115deg, transparent, transparent 20px, rgba(255, 255, 255, 0.1) 20px, rgba(255, 255, 255, 0.1) 40px), repeating-linear-gradient(115deg, transparent, transparent 20px, rgba(255, 255, 255, 0.1) 20px, rgba(255, 255, 255, 0.1) 40px);
   color: #fff;
-  border-radius: 3%; }
+  border-radius: 3%;
+  animation: grz 5s ease infinite; }
 
 #positioner-all-star {
   transform: scale(0.85);
@@ -91,7 +142,7 @@ svg {
   line-height: 1;
   font-weight: bold;
   padding: 15px 20px;
-  background: radial-gradient(ellipse farthest-corner at right bottom, #fedb37 0%, #fdb931 8%, #9f7928 30%, #8a6e2f 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #ffffff 0%, #ffffac 8%, #d1b464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+  background-color: #151823;
   color: black;
   border-radius: 3%; }
 
@@ -165,18 +216,19 @@ svg {
 #stats {
   color: #f3e0be;
   border: 8px groove rgba(243, 224, 190, 0.342);
+  padding: 0px 7px;
   font-family: "Maven Pro", sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   display: flex;
   flex-direction: row;
   min-height: 100px;
-  justify-content: space-around; }
+  justify-content: space-between; }
 
 #stats-left div {
-  margin: 14px 7px; }
+  margin: 4px 7px; }
 
 #stats-right div {
-  margin: 14px 7px; }
+  margin: 4px 7px; }
 
 #stats-left {
   display: flex;
@@ -213,25 +265,54 @@ center h4 {
   flex-direction: column;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis; }
+  text-overflow: ellipsis;
+  background-color: #151823; }
+  #profile-all-star:after {
+    position: absolute;
+    content: "";
+    top: 80px;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+    transform: scale(0.75);
+    -webkit-filter: blur(80px);
+    -moz-filter: blur(80px);
+    -ms-filter: blur(80px);
+    filter: blur(80px);
+    background: linear-gradient(270deg, #0fffc1, #7e0fff);
+    background-size: 200% 200%;
+    animation: animateGlow 10s ease infinite; }
+
+@keyframes animateGlow {
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 50%; }
+  100% {
+    background-position: 0% 50%; } }
 
 #stats-all-star {
   color: #f3e0be;
-  border: 8px groove #b3861f;
+  border: 8px groove #332141;
+  padding: 0px 7px;
   font-family: "Maven Pro", sans-serif;
-  font-size: 20px;
+  font-size: 19px;
   display: flex;
   flex-direction: row;
   min-height: 100px;
-  justify-content: space-around; }
+  justify-content: space-between;
+  background-color: #151823; }
 
 #stats-left-all-star div {
-  color: #181818;
-  margin: 14px 7px; }
+  animation: textColor 10s ease infinite;
+  margin: 4px 7px; }
 
 #stats-right-all-star div {
-  color: #181818;
-  margin: 14px 7px; }
+  animation: textColor 10s ease infinite;
+  margin: 4px 7px; }
 
 #stats-left-all-star {
   display: flex;
@@ -245,45 +326,13 @@ center h4 {
   font-weight: 1000;
   font-family: "Maven Pro", sans-serif;
   font-size: 30px;
-  color: #181818; }
+  animation: textColor 10s ease infinite; }
 
-/* html{ */
-/* background: black;  */
-/* } */
 #treeSection {
   display: flex;
   flex-direction: row;
   justify-content: flex-start; }
 
-/*
-@keyframes pulse {
-    0%     { opacity: .1; }
-    20%    { opacity: .8; }
-    100%   { opacity: .1; }
-}
-
-svg path {
-  animation-duration: 1s;
-    animation-name: pulse;
-    animation-iteration-count: infinite;
-    color: #B54213;
-}
-
-
-
-svg:not(:root){
-       position: relative;
-    /* top: -0vh; */
-/* left: -5vw; */
-/* } */
-/* .bb-7 { animation-delay: -1s }
-.bb-6 { animation-delay: -.875s }
-.bb-5 { animation-delay: -.75s }
-.bb-4 { animation-delay: -.625s }
-.bb-3 { animation-delay: -.5s }
-.bb-2 { animation-delay: -.375s }
-.bb-1 { animation-delay: -.25s }
-.bb-0 { animation-delay: -.125s } */
 html,
 body {
   z-index: 0; }
@@ -300,26 +349,6 @@ body {
   fill: rgba(246, 238, 238, 0.842);
   animation: fill 2s infinite ease-in-out;
   font-family: "Maven Pro", sans-serif; }
-
-@-webkit-keyframes fill {
-  0% {
-    fill: rgba(246, 238, 238, 0.842); }
-  50% {
-    fill: #ff6f61;
-    font-size: 17px; }
-  100% {
-    font-size: 16px;
-    fill: rgba(246, 238, 238, 0.842); } }
-
-@-webkit-keyframes fill-all-star {
-  0% {
-    fill: rgba(246, 238, 238, 0.842); }
-  50% {
-    font-size: 17px;
-    fill: #fbff00; }
-  100% {
-    font-size: 16px;
-    fill: rgba(246, 238, 238, 0.842); } }
 
 .node .all-star {
   fill: goldenrod;
@@ -386,9 +415,3 @@ html {
   height: 3px;
   background: transparent;
   box-shadow: 1331px 147px #fff, 1484px 1782px #fff, 676px 156px #fff, 439px 928px #fff, 618px 793px #fff, 1312px 1076px #fff, 329px 429px #fff, 233px 462px #fff, 614px 1575px #fff, 170px 253px #fff, 56px 502px #fff, 577px 1703px #fff, 1375px 997px #fff, 835px 856px #fff, 1346px 483px #fff, 1399px 179px #fff, 175px 1904px #fff, 711px 1116px #fff, 243px 577px #fff, 1751px 1987px #fff, 1357px 408px #fff, 777px 1622px #fff, 1061px 1812px #fff, 1003px 1042px #fff, 1786px 1506px #fff, 539px 1736px #fff, 275px 251px #fff, 1945px 143px #fff, 816px 1614px #fff, 1965px 93px #fff, 539px 1962px #fff, 248px 1525px #fff, 774px 1041px #fff, 1522px 928px #fff, 571px 444px #fff, 767px 1979px #fff, 1069px 1759px #fff, 59px 1984px #fff, 1839px 1773px #fff, 1075px 459px #fff, 24px 1901px #fff, 1183px 663px #fff, 1118px 765px #fff, 1717px 692px #fff, 1771px 645px #fff, 1915px 1674px #fff, 1292px 879px #fff, 1824px 327px #fff, 370px 1414px #fff, 1379px 1103px #fff, 1204px 1704px #fff, 311px 848px #fff, 1288px 676px #fff, 848px 742px #fff, 1532px 1341px #fff, 1666px 1136px #fff, 1384px 1841px #fff, 496px 1454px #fff, 430px 1140px #fff, 1237px 576px #fff, 1168px 1027px #fff, 1856px 228px #fff, 1412px 66px #fff, 1197px 1325px #fff, 1500px 1572px #fff, 1277px 1542px #fff, 1522px 998px #fff, 1673px 587px #fff, 1310px 1616px #fff, 1793px 1572px #fff, 446px 1284px #fff, 1141px 789px #fff, 118px 1977px #fff, 479px 466px #fff, 1654px 1231px #fff, 167px 1305px #fff, 1859px 1160px #fff, 345px 1992px #fff, 1411px 372px #fff, 353px 110px #fff, 506px 1369px #fff, 564px 1355px #fff, 1043px 31px #fff, 535px 105px #fff, 19px 469px #fff, 354px 1232px #fff, 1404px 321px #fff, 87px 549px #fff, 350px 1339px #fff, 1997px 681px #fff, 1285px 800px #fff, 1667px 1801px #fff, 1065px 1983px #fff, 1503px 478px #fff, 882px 1041px #fff, 1110px 1778px #fff, 1445px 1318px #fff, 50px 1793px #fff, 834px 561px #fff, 34px 1052px #fff; }
-
-@keyframes animStar {
-  from {
-    transform: translateY(0px); }
-  to {
-    transform: translateY(-2000px); } }
