--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,135 @@
-// body{
-//   overflow: hidden;
-// }
+@mixin backlight($x, $y, $spread, $size, $colorA, $colorB, $duration) {
+  &:after {
+    position: absolute;
+    content: "";
+    top: $y;
+    left: $x;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+    transform: scale($size);
+    -webkit-filter: blur($spread);
+    -moz-filter: blur($spread);
+    -ms-filter: blur($spread);
+    filter: blur($spread);
+    background: linear-gradient(270deg, $colorA, $colorB);
+    background-size: 200% 200%;
+    animation: animateGlow $duration ease infinite;
+    
+    @keyframes animateGlow {
+      0%{background-position:0% 50%}
+      50%{background-position:100% 50%}
+      100%{background-position:0% 50%}
+    }
+  }
+}
+
+
+@-webkit-keyframes textColor {
+  0% {
+    color: #7e0fff;
+  }
+  50% {
+    color: #0fffc1;
+  }
+  100% {
+    color: #7e0fff;
+  }
+}
+
+@-webkit-keyframes fill {
+  0% {
+    fill: rgba(246, 238, 238, 0.842);
+  }
+  50% {
+    fill: #ff6f61;
+    font-size: 17px;
+  }
+  100% {
+    font-size: 16px;
+    fill: rgba(246, 238, 238, 0.842);
+  }
+}
+
+@-webkit-keyframes fill-all-star {
+  0% {
+    fill: rgba(246, 238, 238, 0.842);
+  }
+  50% {
+    font-size: 17px;
+    fill: rgb(251, 255, 0);
+  }
+  100% {
+    font-size: 16px;
+    fill: rgba(246, 238, 238, 0.842);
+  }
+}
+
+@-webkit-keyframes animStar {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-2000px);
+  }
+}
+
+@keyframes grz {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+@-webkit-keyframes grz {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+@keyframes color-changer {
+  33% {
+    color: #ee0bf5;
+  }
+  /* #EE0BF5 cctv*/
+  66% {
+    color: #00ccff;
+  }
+  /* #00CCFF marine */
+  100% {
+    color: rgb(43, 255, 0);
+  }
+  /* #66F50B radio */
+}
+
+@-webkit-keyframes color-changer {
+  33% {
+    color: #ee0bf5;
+  }
+  /* #EE0BF5 cctv*/
+  66% {
+    color: #00ccff;
+  }
+  /* #00CCFF marine */
+  100% {
+    color: rgb(43, 255, 0);
+  }
+  /* #66F50B radio */
+}
+
 
 svg {
   display: block;
@@ -53,35 +182,6 @@ svg {
   }
 }
 
-@keyframes color-changer {
-  33% {
-    color: #ee0bf5;
-  }
-  /* #EE0BF5 cctv*/
-  66% {
-    color: #00ccff;
-  }
-  /* #00CCFF marine */
-  100% {
-    color: rgb(43, 255, 0);
-  }
-  /* #66F50B radio */
-}
-
-@-webkit-keyframes color-changer {
-  33% {
-    color: #ee0bf5;
-  }
-  /* #EE0BF5 cctv*/
-  66% {
-    color: #00ccff;
-  }
-  /* #00CCFF marine */
-  100% {
-    color: rgb(43, 255, 0);
-  }
-  /* #66F50B radio */
-}
 
 #positioner {
   transform: scale(0.85);
@@ -114,6 +214,7 @@ svg {
     );
   color: #fff;
   border-radius: 3%;
+  animation: grz 5s ease infinite;
 }
 #positioner-all-star {
   transform: scale(0.85);
@@ -123,22 +224,24 @@ svg {
   line-height: 1;
   font-weight: bold;
   padding: 15px 20px;
-  background: radial-gradient(
-      ellipse farthest-corner at right bottom,
-      #fedb37 0%,
-      #fdb931 8%,
-      #9f7928 30%,
-      #8a6e2f 40%,
-      transparent 80%
-    ),
-    radial-gradient(
-      ellipse farthest-corner at left top,
-      #ffffff 0%,
-      #ffffac 8%,
-      #d1b464 25%,
-      #5d4a1f 62.5%,
-      #5d4a1f 100%
-    );
+  background-color: #151823; 
+
+  // background: radial-gradient(
+  //     ellipse farthest-corner at right bottom,
+  //     #fedb37 0%,
+  //     #fdb931 8%,
+  //     #9f7928 30%,
+  //     #8a6e2f 40%,
+  //     transparent 80%
+  //   ),
+  //   radial-gradient(
+  //     ellipse farthest-corner at left top,
+  //     #ffffff 0%,
+  //     #ffffac 8%,
+  //     #d1b464 25%,
+  //     #5d4a1f 62.5%,
+  //     #5d4a1f 100%
+  //   );
   color: black;
   border-radius: 3%;
 }
@@ -223,19 +326,20 @@ svg {
 #stats {
   color: #f3e0be;
   border: 8px groove rgba(243, 224, 190, 0.342);
+  padding: 0px 7px;
   font-family: "Maven Pro", sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   display: flex;
   flex-direction: row;
   min-height: 100px;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 #stats-left div {
-  margin: 14px 7px;
+  margin: 4px 7px;
 }
 #stats-right div {
-  margin: 14px 7px;
+  margin: 4px 7px;
 }
 
 #stats-left {
@@ -277,26 +381,30 @@ center h4 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  background-color: #151823;
+  @include backlight(0, 80px, 80px, 0.75, #0fffc1, #7e0fff, 10s);  
 }
 
 #stats-all-star {
   color: #f3e0be;
-  border: 8px groove rgb(179, 134, 31);
+  border: 8px groove #332141;
+  padding: 0px 7px;
   font-family: "Maven Pro", sans-serif;
-  font-size: 20px;
+  font-size: 19px;
   display: flex;
   flex-direction: row;
   min-height: 100px;
-  justify-content: space-around;
+  justify-content: space-between;
+  background-color: #151823;
 }
 
 #stats-left-all-star div {
-  color: #181818;
-  margin: 14px 7px;
+  animation: textColor 10s ease infinite;
+  margin: 4px 7px;
 }
 #stats-right-all-star div {
-  color: #181818;
-  margin: 14px 7px;
+  animation: textColor 10s ease infinite;
+  margin: 4px 7px;
 }
 
 #stats-left-all-star {
@@ -312,49 +420,14 @@ center h4 {
   font-weight: 1000;
   font-family: "Maven Pro", sans-serif;
   font-size: 30px;
-  color: #181818;
+  animation: textColor 10s ease infinite;
 }
-
-/* html{ */
-/* background: black;  */
-/* } */
 
 #treeSection{
   display: flex;
   flex-direction: row;
   justify-content: flex-start
 } 
-
-/*
-@keyframes pulse {
-    0%     { opacity: .1; }
-    20%    { opacity: .8; }
-    100%   { opacity: .1; }
-}
-
-svg path {
-  animation-duration: 1s;
-    animation-name: pulse;
-    animation-iteration-count: infinite;
-    color: #B54213;
-}
-
-
-
-svg:not(:root){
-       position: relative;
-    /* top: -0vh; */
-/* left: -5vw; */
-/* } */
-
-/* .bb-7 { animation-delay: -1s }
-.bb-6 { animation-delay: -.875s }
-.bb-5 { animation-delay: -.75s }
-.bb-4 { animation-delay: -.625s }
-.bb-3 { animation-delay: -.5s }
-.bb-2 { animation-delay: -.375s }
-.bb-1 { animation-delay: -.25s }
-.bb-0 { animation-delay: -.125s } */
 
 html,
 body {
@@ -375,33 +448,6 @@ body {
   font-family: "Maven Pro", sans-serif;
 }
 
-@-webkit-keyframes fill {
-  0% {
-    fill: rgba(246, 238, 238, 0.842);
-  }
-  50% {
-    fill: #ff6f61;
-    font-size: 17px;
-  }
-  100% {
-    font-size: 16px;
-    fill: rgba(246, 238, 238, 0.842);
-  }
-}
-
-@-webkit-keyframes fill-all-star {
-  0% {
-    fill: rgba(246, 238, 238, 0.842);
-  }
-  50% {
-    font-size: 17px;
-    fill: rgb(251, 255, 0);
-  }
-  100% {
-    font-size: 16px;
-    fill: rgba(246, 238, 238, 0.842);
-  }
-}
 
 .node .all-star {
   fill: goldenrod;
@@ -987,11 +1033,3 @@ html {
     834px 561px #fff, 34px 1052px #fff;
 }
 
-@keyframes animStar {
-  from {
-    transform: translateY(0px);
-  }
-  to {
-    transform: translateY(-2000px);
-  }
-}
